# Lumina-Note

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  INTERACTION-EFFECTS-GUIDE.md  README.de.md  README.en.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.ru.md  README.zh-CN.md  README.zh-TW.md  WINDSURF_ARCHITECTURE_COMPLETE.md  docker-compose.hosted.yml  docker-compose.selfhost.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security-audit.yml
deploy/: Caddyfile
docs/: AGENT_EVALUATION.md  CODEX_VSCODE_HOST_PLAN.md  PDF_SUPPORT_DESIGN.md  PP_STRUCTURE_SETUP.md  ROADMAP.md  THEME_DEVELOPMENT.md  TYPESETTING_ENGINE_PLAN.md  TYPESETTING_ENGINE_PROGRESS.md  WEBDAV_API.md  WORD_BASELINE_CAPTURE.md  cloud-sync-dev.md  database-frontend-rules.md  doc-engine-agent-prompt.md  doc-engine-change-log.md  doc-engine-phase1-report.md  doc-engine-phase2-report.md  doc-engine-roadmap.md  issue-159-network-drive-regression-report.md  mobile-wifi-protocol.md  openclaw-workspace-integration.md  plugin-ecosystem.md  plugin-manifest.v1.md  plugin-open-strategy.md  release.md  self-host.md  self-host.zh-CN.md  typesetting-ir-ops.md  typesetting-ir-schema.md  user-flow.ja.md  user-flow.md  user-flow.zh-CN.md
docs/plans/: 2026-03-06-cloud-error-dismissal-fix.md  2026-03-09-compact-mac-top-chrome.md  2026-03-09-remove-blue-app-background-design.md  2026-03-11-image-manager-compact-redesign.md  2026-03-11-preview-tab-design.md  2026-03-12-proxy-configuration-design.md  2026-03-12-proxy-configuration-plan.md
e2e/: flashcard-review-repro.html  flashcard-review-repro.ts
mobile/: README.md
mobile/android/: settings.gradle.kts
scripts/: bundle_node.mjs  generate_docx_samples.py  generate_latest_json.ts  pp_structure_server.py  requirements-pp-structure.txt  typesetting_baseline_batch.mjs  typesetting_baseline_compare.mjs  typesetting_baseline_compare_manifest.mjs  typesetting_compare_summary.mjs  typesetting_export_harness.mjs  typesetting_ir_diff.mjs  typesetting_ir_metrics.mjs  typesetting_layout_metrics.mjs  typesetting_lumina_batch_export.mjs  typesetting_openoffice_render.mjs  typesetting_pdf_diff.mjs  typesetting_pdf_diff.ts  typesetting_pixel_diff.mjs
scripts/codex-vscode-host/: host.mjs
server/: Cargo.toml  Dockerfile
server/src/: auth.rs  config.rs  dav.rs  db.rs  error.rs  main.rs  models.rs  relay.rs  routes.rs  state.rs
src/: App.tsx  pdfWorker.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/plugins/browser-launcher/: index.js  plugin.json
src-tauri/resources/plugins/hello-lumina/: index.js  plugin.json
src-tauri/resources/plugins/openclaw-workspace/: index.js  plugin.json
src-tauri/resources/plugins/pixel-noir/: index.js
src-tauri/resources/plugins/theme-oceanic/: index.js  plugin.json
src-tauri/resources/plugins/ui-overhaul-lab/: index.js  plugin.json
src-tauri/resources/plugins/video-note-launcher/: index.js  plugin.json
src-tauri/resources/skills/docx/: SKILL.md  skill.json
src-tauri/resources/skills/extract-todos/: SKILL.md  skill.json
src-tauri/resources/skills/pdf/: skill.json
src-tauri/resources/skills/polish-writing/: SKILL.md  skill.json
src-tauri/resources/skills/summarize-note/: SKILL.md  skill.json
src-tauri/src/: cloud_relay.rs  codex_extension.rs  codex_vscode_host.rs  diagnostics.rs  doc_tools.rs  error.rs  lib.rs  llm.rs  main.rs  mobile_gateway.rs  node_runtime.rs  plugins.rs  proxy.rs  update_manager.rs
src-tauri/src/agent/: commands.rs  debug_log.rs  forge_loop.rs  llm_client.rs  mod.rs  skills.rs  types.rs  workspace_layout.rs
src-tauri/src/agent/deep_research/: builder.rs  crawler.rs  mod.rs  nodes.rs  tavily.rs  types.rs
src-tauri/src/agent/graph/: builder.rs  mod.rs  nodes.rs
src-tauri/src/agent/note_map/: mod.rs  renderer.rs
src-tauri/src/agent/tools/: definitions.rs  fast_search.rs  mod.rs  registry.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/forge_runtime/: permissions.rs
src-tauri/src/forge_runtime/tools/: bash.rs  edit.rs  fetch.rs  glob.rs  grep.rs  list.rs  mod.rs  read.rs  shared.rs  write.rs
src-tauri/src/forge_runtime/tools/descriptions/: fetch.txt
src-tauri/src/fs/: manager.rs  watcher.rs
src-tauri/src/langgraph/: ablation.rs  branch.rs  channel.rs  constants.rs  error.rs  evaluator.rs  executor.rs  graph.rs  metrics.rs  mod.rs  node.rs  state.rs
src-tauri/src/mcp/: client.rs  config.rs  mod.rs  transport.rs  types.rs
src-tauri/src/typesetting/: font_manager.rs  line_break.rs  mod.rs  page_model.rs  pagination.rs  paragraph_layout.rs  pdf_export.rs  preview_pipeline.rs  preview_viewport.rs  shaping.rs  text_layout.rs
src-tauri/src/vector_db/: commands.rs  mod.rs
src-tauri/src/webdav/: client.rs  commands.rs  mod.rs  sync.rs  types.rs
src-tauri/tests/: macos_overlay_config.rs  mcp_integration.rs  tauri_config_titlebar.rs
src-tauri/tests/fixtures/typesetting/: bilingual.json  long.json  short.json
src/__tests__/: codexOpenaiChatgptWebview.e2e.test.ts  codexVscodeHost.test.ts  flashcardIntentContract.repro.test.ts  flashcardReview.chromium.e2e.test.ts  flashcardRouterPrompt.repro.test.ts  setup.ts  uiStoreChatMode.test.ts  useFileStore.rehydrateFsRoots.test.ts  useFileStore.typesettingDocx.test.ts
src/agent/: types.ts
src/components/: AgentPanel.tsx  ChatInput.tsx  KnowledgeGraph.tsx  MainAIChatShell.tsx  Ribbon.tsx  RightPanel.tsx  SelectionToolbar.tsx  Sidebar.tsx  SplitEditor.tsx  TabBar.tsx  VideoNoteView.tsx
src/config/: themePlugin.test.ts  themePlugin.ts  themes.ts
src/editor/: CodeMirrorEditor.codeblockEditing.test.tsx  CodeMirrorEditor.modeTransition.test.tsx  (+6 more)
(+392 files in other folders)
