[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5"
axum = { version = "0.6", features = ["ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
httpdate = "1"
hyper = { version = "0.14", features = ["full"] }
jsonwebtoken = "9"
mime_guess = "2"
futures-util = "0.3"
password-hash = "0.5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
urlencoding = "2.1"
