[package]
name = "lumina-note"
version = "0.5.11"
description = "A local-first AI-powered note-taking app"
authors = ["Lumina Note Contributors"]
edition = "2021"

[lib]
name = "lumina_note_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["protocol-asset", "unstable", "test"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-shell = "2.3.5"
tauri-plugin-os = "2.3.2"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
notify = "6.1"
walkdir = "2.5"
thiserror = "2.0"
rayon = "1.10"
trash = "5"
base64 = "0.22"
regex = "1.12"
globset = "0.4"
forge = { git = "https://github.com/blueberrycongee/forge", rev = "ad07eb7d885d399fce7f7da4d53bd8a7714cc907" }
tokio-tungstenite = "0.21"
if-addrs = "0.6"

# RAG / Vector Storage
rusqlite = { version = "0.32", features = ["bundled"] }
bincode = "1.3"

# HTTP client for Bilibili API & LLM streaming & WebDAV
reqwest = { version = "0.13", features = ["json", "stream"] }
urlencoding = "2.1"
futures-util = "0.3"
flate2 = "1.1"
chrono = "0.4"
rand = "0.8"
uuid = { version = "1.20", features = ["v4"] }
once_cell = "1.19"
ttf-parser = "0.19"
rustybuzz = "0.11"
scraper = "0.25.0"
html2md = "0.2.15"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
